mutatePolicy/demo/patch2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod1
  labels:
    foo: bar
    color: orange
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
