mutatePolicy/demo/patch3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod1
  labels:
    foo: bar
    color: blue
  namespace: practice
spec:
  containers:
  - name: nginx
    image: nginx:latest
