mutatePolicy/demo/patches2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
  name: myapp-pod1
  namespace: practice
spec:
  containers:
  - image: nginx:latest
    name: nginx
  dnsConfig:
    options:
    - name: ndots
      value: "1"
