mutatePolicy/demo/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-label
  annotations:
    policies.kyverno.io/title: Add nodeSelector
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The nodeSelector field uses labels to select the node on which a Pod can be scheduled.
      This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
      This policy adds the nodeSelector field to a Pod spec and configures it with labels `foo` and `color`.
spec:
  background: false
  validationFailureAction:
  rules:
  - name: add-label
    match:
      resources:
        kinds:
        - Pod
    # Adds the `nodeSelector` field to any Pod with two labels.
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            color: orange
